# deepnote-hackathon

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  app.py  config.py  pylint-badge.json  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: pylint.yml
config/: llm.yaml  ocr.yaml  scraper.yaml  ui.yaml
src/: __init__.py  aws.py  llm.py  ocr.py  scraper.py  ui.py  utils.py
