[tool.poetry]
name = "AI-OCR-Financial-Analyser"
version = "1.0.0"
description = "DeepNote Hackathon project for AI OCR Financial Analyser"
authors = [
    "Petr Nguyen (Main Developer) <ngn.petr@gmail.com>",
    "Samuel Kruzek (Co-Developer) <samuel.kruzek@gmail.com>",
    "Simona Dohova (Co-Developer) <s.dohova@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.45.1"
boto3= "^1.38.27"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.1"
botocore = "^1.38.27"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"